test: sync